@@ -643,7 +643,24 @@ blockquote {
     border: 0;
     /*border-left: 3px #aaa solid;*/
     border-left: #5555EE solid 0.2em;
+    color: #5555ee;
 }
+
+blockquote > blockquote {
+    border-left: #425c78 solid 0.2em;
+    color: #425c78;
+}
+
+blockquote > blockquote > blockquote {
+    border-left: #729fcf solid 0.2em;
+    color: #729fcf;
+}
+
+blockquote > blockquote > blockquote > blockquote {
+    border-left: #425c78 solid 0.2em;
+    color: #425c78;
+}
+
 
 .search_coloring *::selection {
     background-color: #00ddff;
@@ -761,7 +778,7 @@ License: http://cssload.net/en/terms_of_use
     0% {
         background-color:#000000
     }
-    
+
     100% {
     background-color:#FFFFFF
     }
